# DeepAgentFuture

./: .gitignore  IMPLEMENTATION_PLAN.md  PROGRESS_REPORT.md  __diff_temp.sh  pyproject.toml
src/deep_agent_future/: agent.py  context_manager.py  failed_context.json  failed_messages.json  main.py  scheduler.py  telegram_bot.py  tool_registry.py
src/deep_agent_future/builtin_tools/: __init__.py  additional_tools.py  edit_tools.py  fs_tools.py  git_tools.py  groq_whisper_tools.py  meta_tools.py  rest_api_tool.py  search_tools.py  tavily_tools.py  telegram_tools.py  tts_tools.py  window_tools.py
src/deep_agent_future/data/: tool_ratings.md
src/deep_agent_future/runtime/: current_datetime.txt
src/deep_agent_future/system_prompts/: core.md  extended.md  tools_guidelines.md
