[project]
name = "deep-agent-future"
version = "0.1.0"
description = "MASTERMIND v2 — Autonomous self-improving LLM agent"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "orjson>=3.9.0",
]

[project.optional-dependencies]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
voice = [
    "groq>=0.15.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
